# 3d_music_video

./: .clang-format  .editorconfig  .gitignore  BUILD_STATUS_REPORT.md  BUILD_SUCCESS_REPORT.md  CMakeLists.txt  FINAL_BUILD_REPORT.md  FINAL_BUILD_REPORT_V5.md  FINAL_PROJECT_COMPLETE_REPORT.md  FINAL_PROJECT_STATUS.md  FINAL_PROJECT_STATUS_V3.md  INSTALLATION_GUIDE.md  ISSUES_AND_SOLUTIONS.md  ISSUES_FIX_FINAL_REPORT.md  LICENSE  LICENSE_EN  PROJECT_FINAL_REPORT.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  README_EN.md  TEST_EXECUTION_STATUS.md  TEST_REPORT.md  USER_GUIDE.md  check_env_en.bat  cleanup_and_push.bat  commit_and_push.bat  git_commit.ps1  package.json  push_to_gitee.bat  push_to_github.bat  quick_test.bat  run_tests.bat  verify_installation.bat
app/: CMakeLists.txt  main.cpp
app/ai/: ai_plugin_system.h
app/core/: audio_converter.cpp  audio_converter.h  project_manager.cpp  project_manager.h
app/modeling/: geometry_factory.cpp  geometry_factory.h  lighting_system.h  material_manager.h  mesh_editor.h  model_library.h
app/panels/: panel_3d_view.cpp  panel_3d_view.h  panel_ai_assistant.cpp  panel_ai_assistant.h  panel_asset_browser.cpp  panel_asset_browser.h  panel_modeling_tools.cpp  panel_modeling_tools.h  panel_properties.cpp  panel_properties.h  panel_timeline.cpp  panel_timeline.h
app/ui/: gl_renderer.cpp  gl_renderer.h  main_window.cpp  main_window.h
scripts/: build_and_test.bat  check_env.bat  finalize.bat  finish_organize.bat  fix_cleanup.bat  organize_project.bat  run_tests.sh
src/animation/: CMakeLists.txt  animation_clip.cpp  animation_clip.h  animation_controller.cpp  animation_controller.h  animation_state_machine.cpp  animation_state_machine.h  bone.cpp  bone.h  curve.cpp  curve.h  ik_solver.cpp  ik_solver.h  keyframe.cpp  keyframe.h  pose.cpp  skeleton.cpp  skeleton.h
src/audio/: CMakeLists.txt  audio_buffer.cpp  audio_buffer.h  audio_effect.cpp  audio_effect.h  audio_engine.cpp  audio_engine.h  audio_mixer.cpp  audio_mixer.h  audio_source.cpp  audio_source.h  midi_processor.cpp  midi_processor.h  vocal_synthesizer.cpp  vocal_synthesizer.h  waveform_editor.cpp  waveform_editor.h
src/concurrency/: CMakeLists.txt  async_executor.cpp  async_executor.h  parallel_for.cpp  task_scheduler.cpp  thread_pool.cpp  thread_pool.h
src/core/: CMakeLists.txt  event_system.cpp  event_system.h  logger.cpp  logger.h  memory_pool.cpp  memory_pool.h  object_manager.cpp  object_manager.h  version_control.cpp  version_control.h
src/io/: CMakeLists.txt  asset_manager.cpp  asset_manager.h  file_loader.cpp  file_loader.h  file_saver.cpp  file_saver.h  format_converter.cpp  format_converter.h  serializer.cpp  serializer.h
src/modeling/: CMakeLists.txt  edge.cpp  face.cpp  material.cpp  material.h  mesh.cpp  mesh.h  mesh_builder.cpp  mesh_builder.h  mesh_operations.cpp  mesh_operations.h  subdivision.cpp  subdivision.h  uv_editor.cpp  uv_editor.h  vertex.cpp  vertex.h
tests/: CMakeLists.txt  README.md  test_main.cpp
tests/animation/: test_animation_clip.cpp  test_curve.cpp  test_ik_solver.cpp  test_pose.cpp  test_skeleton.cpp
tests/audio/: test_audio_buffer.cpp  test_audio_effect.cpp  test_audio_engine.cpp  test_vocal_synthesizer.cpp
tests/concurrency/: test_async_executor.cpp  test_task_scheduler.cpp  test_thread_pool.cpp
tests/core/: test_event_system.cpp  test_logger.cpp  test_memory_pool.cpp  test_object_manager.cpp  test_version_control.cpp
tests/io/: test_asset_manager.cpp  test_file_loader.cpp  test_file_saver.cpp  test_format_converter.cpp  test_serializer.cpp
tests/modeling/: test_edge.cpp  test_face.cpp  test_material.cpp  test_mesh.cpp  test_mesh_operations.cpp  test_subdivision.cpp  test_vertex.cpp
tests/utils/: test_data_generator.cpp  test_data_generator.h  test_reporter.cpp  test_reporter.h  test_utils.cpp  test_utils.h
